RESOLVED FIXED143039
Source/WebCore/rendering/RenderThemeMac.mm:2181:118: error: null passed to a callee that requires a non-null argument [-Werror,-Wnonnull]
https://bugs.webkit.org/show_bug.cgi?id=143039
Summary Source/WebCore/rendering/RenderThemeMac.mm:2181:118: error: null passed to a ...
Dean Jackson
Reported 2015-03-24 22:46:24 PDT
Failing to compile on newer versions of OS X.
Attachments
Patch (2.65 KB, patch)
2015-03-24 22:50 PDT, Dean Jackson
no flags
Radar WebKit Bug Importer
Comment 1 2015-03-24 22:46:51 PDT
Dean Jackson
Comment 2 2015-03-24 22:50:33 PDT
Dean Jackson
Comment 3 2015-03-24 23:07:20 PDT
Note You need to log in before you can comment on or make changes to this bug.